force-app/main/default/objects/Reference_Response__c/Reference_Response__c.object-meta.xml
<CustomObject>
    <label>Reference Response</label>
    <nameField>
        <displayFormat>RRID-{0000}</displayFormat>
        <label>Reference Response Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>