force-app/main/default/objects/Reference_Response__c/fields/Attestation_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Attestation_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I Attest Information is True &amp; Complete</label>
    <type>Checkbox</type>
</CustomField>