force-app/main/default/objects/Reference_Response__c/fields/Concerns_Flag__c.field-meta.xml
<CustomField>
    <fullName>Concerns_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concerns About Applicant as Caregiver?</label>
    <type>Checkbox</type>
</CustomField>