force-app/main/default/objects/Reference_Response__c/fields/Consent_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Consent_To_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent to be Contacted for Follow-Up</label>
    <type>Checkbox</type>
</CustomField>