force-app/main/default/objects/Reference_Response__c/fields/E_Signature_Typed_Name__c.field-meta.xml
<CustomField>
    <fullName>E_Signature_Typed_Name__c</fullName>
    <label>E-Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>