force-app/main/default/objects/Reference_Response__c/fields/Emotional_Stability_Rating__c.field-meta.xml
<CustomField>
    <fullName>Emotional_Stability_Rating__c</fullName>
    <label>Emotional Stability Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>