force-app/main/default/objects/Reference_Response__c/fields/How_long_have_you_known_the_applicant__c.field-meta.xml
<CustomField>
    <fullName>How_long_have_you_known_the_applicant__c</fullName>
    <label>How Long Have You Known the Applicant?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>