force-app/main/default/objects/Reference_Response__c/fields/Internal_Reviewer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Reviewer_Notes__c</fullName>
    <label>Internal Reviewer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>