force-app/main/default/objects/Reference_Response__c/fields/Parenting_Rating__c.field-meta.xml
<CustomField>
    <fullName>Parenting_Rating__c</fullName>
    <label>Ability to Parent for Children Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>