force-app/main/default/objects/Reference_Response__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Would You Recommend the Applicant?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly recommend</fullName>
            </value>
            <value>
                <fullName>Recommend</fullName>
            </value>
            <value>
                <fullName>With some reservations</fullName>
            </value>
            <value>
                <fullName>Do not recommend</fullName>
            </value>
            <value>
                <fullName>Uncertain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>