force-app/main/default/objects/Reference_Response__c/fields/Reference_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Full_Name__c</fullName>
    <label>Reference Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>