force-app/main/default/objects/Reference_Response__c/fields/References__c.field-meta.xml
<CustomField>
    <fullName>References__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>References</label>
    <referenceTo>References__c</referenceTo>
    <relationshipLabel>Reference Responses</relationshipLabel>
    <relationshipName>Reference_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>