force-app/main/default/objects/Reference_Response__c/fields/Relationship_to_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Applicant__c</fullName>
    <label>Relationship to Applicant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>