force-app/main/default/objects/Reference_Response__c/fields/Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>Risk_Flag__c</fullName>
    <label>Risk Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Risk</fullName>
            </value>
            <value>
                <fullName>Low Risk</fullName>
            </value>
            <value>
                <fullName>Medium Risk</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Critical Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>