force-app/main/default/objects/Reference_Response__c/fields/Safety_Rating__c.field-meta.xml
<CustomField>
    <fullName>Safety_Rating__c</fullName>
    <label>Ability to Provide Safe Home Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>